--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
     <title>MbappeStats</title>
     <link rel="icon" type="image/png" href="/img/icon.png"/>
 </head>
+
 <body>
-    <p>Error 404</p>
+<p>Petite erreur, cette page n'existe pas</p>
 </body>
+
 </html>
